--- a/index.html
+++ b/index.html
@@ -40,21 +40,23 @@
                 </div>
                 <div class="fourth-article__text">
                     <p class="description">Apple may be experimenting in the virtual reality space. The company has been granted a patent for a head-mounted virtual reality device that would use the iPhone screen as the display.</p>
-                    <a class="link" href="#">Download now ></a>
+                    <a class="link fourth-article__link" href="#">Download now ></a>
                 </div>
            </div>
            <img class="fourth-article__img" src="images/macintosh.png" alt="">
         </article>
         <article class="fifth-article">
-            <a class="flag fifth-article__flag" href="#"><i class="fas fa-flag"></i>POPULAR</a>
             <div class="fifth-article__wrapper">
                 <div class="fifth-article__img-container">
+                    <a class="flag fifth-article__flag" href="#"><i class="fas fa-flag"></i>POPULAR</a>
                         <img class="fifth-article__img" src="images/floppy.png" alt=""> 
+                        <small class="fifth-article__sub-img">Meet</small>
                 </div>
-                <small class="fifth-article__sub-img">Meet</small>
-                <h1 class="fifth-article__title"><a href="#">iCloud</a></h1>
-                <p class="fifth-article__text description">With iCloud, you always have the latest versions of your most important things — like documents, apps, notes, and contacts — on whatever device you’re using.</p>
-                <a class="button fifth-article__button" href="#">LEARN MORE</a>
+                <div class="fifth-article__content-container">    
+                    <h1 class="fifth-article__title"><a href="#">iCloud</a></h1>
+                    <p class="fifth-article__text description">With iCloud, you always have the latest versions of your most important things — like documents, apps, notes, and contacts — on whatever device you’re using.</p>
+                    <a class="button fifth-article__button" href="#">LEARN MORE</a>
+                </div>
             </div>
         </article>
         <article class="sixth-article">
