optimized images (webp technology used) / validation passed

--- a/index.html
+++ b/index.html
@@ -1,97 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Grid</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <link rel="icon" href="favicon.png" type="image/png">
-</head>
-<body>
-    <section class="wrapper">
-        <article class="first-article">
-            <div class="first-article__wrapper">
-                <h2 class="suptitle"><a href="#">IPHONE 6S</a></h2>
-                <h1 class="first-article__title"><a href="#">3D Touch. 12MP photos. 4K video. One powerful phone</a></h1>
-                <p class="first-article__description description">Learn more or visit an Apple Store today</p>              
-            </div>
-            <img class="first-article__img" src="../images/phone.png" alt="">
-        </article>
-        <article class="second-article">
-            <div class="second-article__wrapper">
-                <h2 class="suptitle"><a href="#">LEARN MORE</a></h2>
-                <h1 class="second-article__title"><a href="#">How to Use Rotary Evaporator in Chemical Labs</a></h1>
-                <a class="second-article__link" href="#">Download now</a>
-            </div>
-        </article>
-        <article class="third-article">
-            <div class="third-article__wrapper">
-                <img class="third-article__img" src="images/keyboard.png" alt="">
-                <h1 class="third-article__title"><a href="#">Our Brand New Keyboard</a></h1>
-                <a class="link link_yellow" href="#">LEARN ></a>
-            </div>
-        </article>
-        <article class="fourth-article">
-            <div class="fourth-article__wrapper">
-                <div class="fourth-article__header">
-                    <h2 class="suptitle"><a href="#">IMAC.RETINA</a></h2>
-                    <h1 class="fourth-article__title"><a href="#">Hardly a month passes these days where</a></h1>
-                </div>
-                <div class="fourth-article__text">
-                    <p class="description">Apple may be experimenting in the virtual reality space. The company has been granted a patent for a head-mounted virtual reality device that would use the iPhone screen as the display.</p>
-                    <a class="link fourth-article__link" href="#">Download now ></a>
-                </div>
-           </div>
-           <img class="fourth-article__img" src="images/macintosh.png" alt="">
-        </article>
-        <article class="fifth-article">
-            <div class="fifth-article__wrapper">
-                <div class="fifth-article__img-container">
-                    <a class="flag fifth-article__flag" href="#"><i class="fas fa-flag"></i>POPULAR</a>
-                        <img class="fifth-article__img" src="images/floppy.png" alt=""> 
-                        <small class="fifth-article__sub-img">Meet</small>
-                </div>
-                <div class="fifth-article__content-container">    
-                    <h1 class="fifth-article__title"><a href="#">iCloud</a></h1>
-                    <p class="fifth-article__text description">With iCloud, you always have the latest versions of your most important things — like documents, apps, notes, and contacts — on whatever device you’re using.</p>
-                    <a class="button fifth-article__button" href="#">LEARN MORE</a>
-                </div>
-            </div>
-        </article>
-        <article class="sixth-article">
-            <div class="sixth-article__wrapper">
-                <img class="sixth-article__img" src="images/controller.png" alt="">
-                <h1 class="sixth-article__title"><a href="#">Games our pasion</a></h1>
-                <a class="link" href="#">LEARN ></a>
-            </div>
-        </article>
-        <article class="seventh-article">
-            <div class="seventh-article__wrapper">
-                <a class=" marker marker_bg-red seventh-article__marker" href="#">BEST CHOICE</a>
-                <h1 class="seventh-article__title"><a href="#">Much Much Better Experience</a></h1>
-                <div class="seventh-article__abbr">UX</div>
-                <img class="seventh-article__img" src="images/iPad.png" alt="">
-            </div>
-        </article>
-        <article class="eight-article">
-            <div class="eight-article__wrapper">
-                <a class="eight-article__twitter" href="#"><i class="fab fa-twitter"></i></a>
-                <h1 class="eight-article__title"><a href="#">Connect with Twitter</a></h1>
-            </div>
-        </article>
-        <article class="ninth-article">
-            <div class="ninth-article__wrapper">
-                <a class="marker marker_bg-green ninth-article__marker" href="#">POPULAR</a>
-                <h1 class="ninth-article__title"><a href="#">Much Much Better Experience</a></h1>
-            </div>
-        </article>
-        <article class="tenth-article">
-            <div class="tenth-article__wrapper">
-                <img class="tenth-article__img" src="images/TV.png" alt="">
-                <h1 class="tenth-article__title"><a href="#">More than just a display. It’s a vision</a></h1>
-            </div>
-        </article>
-    </section>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><title>Grid</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width initial-scale=1.0"><link href=css/main.css rel=stylesheet><link href=https://use.fontawesome.com/releases/v5.14.0/css/all.css rel=stylesheet crossorigin=anonymous integrity=sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc><link href=favicon.png rel=icon type=image/png><div class=wrapper><article class=first-article><div class=first-article__wrapper><h3 class=suptitle><a href=#>IPHONE 6S</a></h3><h2 class=first-article__title><a href=#>3D Touch. 12MP photos. 4K video. One powerful phone</a></h2><p class="description first-article__description">Learn more or visit an Apple Store today</div><picture><source srcset=images/phone.webp type=image/webp><img alt=""class=first-article__img src=images/phone.png></picture></article><article class=second-article><div class=second-article__wrapper><h3 class=suptitle><a href=#>LEARN MORE</a></h3><h2 class=second-article__title><a href=#>How to Use Rotary Evaporator in Chemical Labs</a></h2><a href=# class=second-article__link>Download now</a></div></article><article class=third-article><div class=third-article__wrapper><picture><source srcset=images/keyboard.webp type=image/webp><img alt=""class=third-article__img src=images/keyboard.png></picture><h2 class=third-article__title><a href=#>Our Brand New Keyboard</a></h2><a href=# class="link link_yellow">LEARN ></a></div></article><article class=fourth-article><div class=fourth-article__wrapper><div class=fourth-article__header><h3 class=suptitle><a href=#>IMAC.RETINA</a></h3><h2 class=fourth-article__title><a href=#>Hardly a month passes these days where</a></h2></div><div class=fourth-article__text><p class=description>Apple may be experimenting in the virtual reality space. The company has been granted a patent for a head-mounted virtual reality device that would use the iPhone screen as the display.</p><a href=# class="link fourth-article__link">Download now ></a></div></div><picture><source srcset=images/macintosh.webp type=image/webp><img alt=""class=fourth-article__img src=images/macintosh.png></picture></article><article class=fifth-article><div class=fifth-article__wrapper><div class=fifth-article__img-container><a href=# class="fifth-article__flag flag"><i class="fa-flag fas"></i>POPULAR</a><picture><source srcset=images/floppy.webp type=image/webp><img alt=""class=fifth-article__img src=images/floppy.png></picture><small class=fifth-article__sub-img>Meet</small></div><div class=fifth-article__content-container><h2 class=fifth-article__title><a href=#>iCloud</a></h2><p class="description fifth-article__text">With iCloud, you always have the latest versions of your most important things — like documents, apps, notes, and contacts — on whatever device you’re using.</p><a href=# class="button fifth-article__button">LEARN MORE</a></div></div></article><article class=sixth-article><div class=sixth-article__wrapper><picture><source srcset=images/controller.webp type=image/webp><img alt=""class=sixth-article__img src=images/controller.png></picture><h2 class=sixth-article__title><a href=#>Games our pasion</a></h2><a href=# class="link sixth-article__link">LEARN ></a></div></article><article class=seventh-article><div class=seventh-article__wrapper><a href=# class="marker marker_bg-red seventh-article__marker">BEST CHOICE</a><h2 class=seventh-article__title><a href=#>Much Much Better Experience</a></h2><div class=seventh-article__abbr>UX</div><picture><source srcset=images/iPad.webp type=image/webp><img alt=""class=seventh-article__img src=images/iPad.png></picture></div></article><article class=eight-article><div class=eight-article__wrapper><a href=# class=eight-article__twitter><i class="fa-twitter fab"></i></a><h2 class=eight-article__title><a href=#>Connect with Twitter</a></h2></div></article><article class=ninth-article><div class=ninth-article__wrapper><a href=# class="marker marker_bg-green ninth-article__marker">POPULAR</a><h2 class=ninth-article__title><a href=#>Much Much Better Experience</a></h2></div></article><article class=tenth-article><div class=tenth-article__wrapper><picture><source srcset=images/tv.webp type=image/webp><img alt=""class=tenth-article__img src=images/tv.png></picture><h2 class=tenth-article__title><a href=#>More than just a display. It’s a vision</a></h2></div></article></div>
